--- a/notebook/dim_tipo_novedad.ipynb
+++ b/notebook/dim_tipo_novedad.ipynb
@@ -34,8 +34,8 @@
     "    configFuente = config['fuente']\n",
     "    configBodega = config['bodega']\n",
     "\n",
-    "urlFuente = f'{configFuente['driver']}://{configFuente['user']}:{configFuente['password']}@{configFuente['host']}:{configFuente['port']}/{configFuente['db']}'\n",
-    "urlBodega = f'{configBodega['driver']}://{configBodega['user']}:{configBodega['password']}@{configBodega['host']}:{configBodega['port']}/{configBodega['db']}'\n",
+    "urlFuente = f\"{configFuente['driver']}://{configFuente['user']}:{configFuente['password']}@{configFuente['host']}:{configFuente['port']}/{configFuente['db']}\"\n",
+    "urlBodega = f\"{configBodega['driver']}://{configBodega['user']}:{configBodega['password']}@{configBodega['host']}:{configBodega['port']}/{configBodega['db']}\"\n",
     "\n",
     "src = create_engine(urlFuente)\n",
     "etl = create_engine(urlBodega)"
@@ -143,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
