Corrección de hechos diario y hora

--- a/notebook/hecho_entrega_mensajeria_diario.ipynb
+++ b/notebook/hecho_entrega_mensajeria_diario.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -85,9 +85,9 @@
        "      <th></th>\n",
        "      <th>key_cliente</th>\n",
        "      <th>key_sede</th>\n",
-       "      <th>total_day</th>\n",
        "      <th>key_fecha</th>\n",
-       "      <th>key_fact_messaging_daily</th>\n",
+       "      <th>key_hecho_entrega_mensajeria_diario</th>\n",
+       "      <th>total_dia</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -95,41 +95,41 @@
        "      <th>0</th>\n",
        "      <td>5</td>\n",
        "      <td>6</td>\n",
-       "      <td>1</td>\n",
        "      <td>299</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
-       "      <td>1</td>\n",
        "      <td>299</td>\n",
        "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
-       "      <td>1</td>\n",
        "      <td>301</td>\n",
        "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "      <td>311</td>\n",
        "      <td>4</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>8</td>\n",
-       "      <td>1</td>\n",
        "      <td>311</td>\n",
        "      <td>5</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -143,41 +143,41 @@
        "      <th>4289</th>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
        "      <td>334</td>\n",
        "      <td>4290</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4290</th>\n",
        "      <td>8</td>\n",
        "      <td>37</td>\n",
-       "      <td>1</td>\n",
        "      <td>439</td>\n",
        "      <td>4291</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4291</th>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
-       "      <td>1</td>\n",
        "      <td>293</td>\n",
        "      <td>4292</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4292</th>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
        "      <td>276</td>\n",
        "      <td>4293</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4293</th>\n",
        "      <td>5</td>\n",
        "      <td>8</td>\n",
-       "      <td>1</td>\n",
        "      <td>269</td>\n",
        "      <td>4294</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -185,23 +185,36 @@
        "</div>"
       ],
       "text/plain": [
-       "      key_cliente  key_sede  total_day  key_fecha  key_fact_messaging_daily\n",
-       "0               5         6          1        299                         1\n",
-       "1               5         5          1        299                         2\n",
-       "2               5         5          1        301                         3\n",
-       "3               2         2          2        311                         4\n",
-       "4               5         8          1        311                         5\n",
-       "...           ...       ...        ...        ...                       ...\n",
-       "4289            2         2          1        334                      4290\n",
-       "4290            8        37          1        439                      4291\n",
-       "4291            5         5          1        293                      4292\n",
-       "4292            2         2          1        276                      4293\n",
-       "4293            5         8          1        269                      4294\n",
+       "      key_cliente  key_sede  key_fecha  key_hecho_entrega_mensajeria_diario  \\\n",
+       "0               5         6        299                                    1   \n",
+       "1               5         5        299                                    2   \n",
+       "2               5         5        301                                    3   \n",
+       "3               2         2        311                                    4   \n",
+       "4               5         8        311                                    5   \n",
+       "...           ...       ...        ...                                  ...   \n",
+       "4289            2         2        334                                 4290   \n",
+       "4290            8        37        439                                 4291   \n",
+       "4291            5         5        293                                 4292   \n",
+       "4292            2         2        276                                 4293   \n",
+       "4293            5         8        269                                 4294   \n",
+       "\n",
+       "      total_dia  \n",
+       "0             1  \n",
+       "1             1  \n",
+       "2             1  \n",
+       "3             2  \n",
+       "4             1  \n",
+       "...         ...  \n",
+       "4289          1  \n",
+       "4290          1  \n",
+       "4291          1  \n",
+       "4292          1  \n",
+       "4293          1  \n",
        "\n",
        "[4294 rows x 5 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,25 +228,33 @@
     "\n",
     "clientes_usuarioaquitoy.drop(columns=[\"ciudad_id\", \"user_id\", \"telefono\", \"area_id\", \"token_Firebase\", \"lider\"], inplace=True)\n",
     "\n",
-    "fact_messaging_daily = pd.merge(mensajeria_servicio, clientes_usuarioaquitoy, left_on='usuario_id', right_on='id', how='inner')\n",
+    "hecho_entrega_mensajeria_diario = pd.merge(mensajeria_servicio, clientes_usuarioaquitoy, left_on='usuario_id', right_on='id', how='inner')\n",
     "\n",
-    "fact_messaging_daily.drop(columns=[\"usuario_id\", \"id\"], inplace=True)\n",
+    "hecho_entrega_mensajeria_diario.drop(columns=[\"usuario_id\", \"id\"], inplace=True)\n",
     "\n",
-    "total_day = fact_messaging_daily.groupby(['fecha_solicitud', 'cliente_id', 'sede_id']).size().reset_index(name='total_day')\n",
-    "fact_messaging_daily = fact_messaging_daily.merge(total_day, on=['fecha_solicitud', 'cliente_id', 'sede_id'])\n",
-    "fact_messaging_daily = fact_messaging_daily.drop_duplicates(subset=['fecha_solicitud', 'cliente_id', 'sede_id'])\n",
+    "total_day = hecho_entrega_mensajeria_diario.groupby(['fecha_solicitud', 'cliente_id', 'sede_id']).size().reset_index(name='total_dia')\n",
+    "hecho_entrega_mensajeria_diario = hecho_entrega_mensajeria_diario.merge(total_day, on=['fecha_solicitud', 'cliente_id', 'sede_id'])\n",
+    "hecho_entrega_mensajeria_diario = hecho_entrega_mensajeria_diario.drop_duplicates(subset=['fecha_solicitud', 'cliente_id', 'sede_id'])\n",
     "\n",
-    "fact_messaging_daily.rename(columns={'fecha_solicitud': 'fecha'}, inplace=True)\n",
+    "hecho_entrega_mensajeria_diario.rename(columns={'fecha_solicitud': 'fecha'}, inplace=True)\n",
     "\n",
     "dim_fecha = pd.read_sql_table('dim_fecha', etl)\n",
     "\n",
-    "fact_messaging_daily = fact_messaging_daily.merge(dim_fecha[['fecha', 'key_dim_fecha']], on='fecha', how='left')\n",
-    "fact_messaging_daily.drop(columns=['fecha'], inplace=True)\n",
-    "fact_messaging_daily.rename(columns={'key_dim_fecha': 'key_fecha', 'cliente_id': 'key_cliente', 'sede_id': 'key_sede',}, inplace=True)\n",
+    "hecho_entrega_mensajeria_diario = hecho_entrega_mensajeria_diario.merge(dim_fecha[['fecha', 'key_dim_fecha']], on='fecha', how='left')\n",
+    "hecho_entrega_mensajeria_diario.drop(columns=['fecha'], inplace=True)\n",
+    "hecho_entrega_mensajeria_diario.rename(columns={'key_dim_fecha': 'key_fecha', 'cliente_id': 'key_cliente', 'sede_id': 'key_sede',}, inplace=True)\n",
     "\n",
-    "fact_messaging_daily[\"key_fact_messaging_daily\"] = range(1, len(fact_messaging_daily) + 1)\n",
+    "hecho_entrega_mensajeria_diario[\"key_hecho_entrega_mensajeria_diario\"] = range(1, len(hecho_entrega_mensajeria_diario) + 1)\n",
     "\n",
-    "fact_messaging_daily"
+    "# Mover la columna 'telefono' al final\n",
+    "cols = [col for col in hecho_entrega_mensajeria_diario.columns if col != 'total_dia'] + ['total_dia']\n",
+    "hecho_entrega_mensajeria_diario = hecho_entrega_mensajeria_diario[cols]\n",
+    "\n",
+    "\n",
+    "# Eliminar filas duplicadas en 'hecho_novedad'\n",
+    "hecho_entrega_mensajeria_diario = hecho_entrega_mensajeria_diario.drop_duplicates()\n",
+    "\n",
+    "hecho_entrega_mensajeria_diario"
    ]
   },
   {
@@ -245,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -254,13 +275,13 @@
        "294"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fact_messaging_daily.to_sql(\"hecho_entrega_mensajeria_diario\", etl, index=False, if_exists=\"replace\")"
+    "hecho_entrega_mensajeria_diario.to_sql(\"hecho_entrega_mensajeria_diario\", etl, index=False, if_exists=\"replace\")"
    ]
   }
  ],
@@ -280,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
