--- a/notebook/hecho_entrega_mensajeria_hora.ipynb
+++ b/notebook/hecho_entrega_mensajeria_hora.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,21 +59,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jpant\\AppData\\Local\\Temp\\ipykernel_20364\\427345242.py:9: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\alejo\\AppData\\Local\\Temp\\ipykernel_15804\\3784377870.py:9: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  mensajeria_servicio['mensajero2_id'].fillna(mensajeria_servicio['mensajero_id'], inplace=True)\n",
-      "C:\\Users\\jpant\\AppData\\Local\\Temp\\ipykernel_20364\\427345242.py:10: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\alejo\\AppData\\Local\\Temp\\ipykernel_15804\\3784377870.py:10: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -103,10 +103,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>key_messenger</th>\n",
-       "      <th>total_hora</th>\n",
+       "      <th>key_mensajero</th>\n",
        "      <th>key_hecho_entrega_mensajeria_hora</th>\n",
        "      <th>key_hora</th>\n",
+       "      <th>total_hora</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -114,36 +114,36 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>121</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>421</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>481</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>4</td>\n",
        "      <td>661</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>5</td>\n",
        "      <td>721</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -155,37 +155,37 @@
        "    <tr>\n",
        "      <th>171</th>\n",
        "      <td>447</td>\n",
-       "      <td>3</td>\n",
        "      <td>172</td>\n",
        "      <td>601</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>172</th>\n",
        "      <td>447</td>\n",
-       "      <td>1</td>\n",
        "      <td>173</td>\n",
        "      <td>841</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>173</th>\n",
        "      <td>447</td>\n",
-       "      <td>2</td>\n",
        "      <td>174</td>\n",
        "      <td>901</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>174</th>\n",
        "      <td>447</td>\n",
-       "      <td>1</td>\n",
        "      <td>175</td>\n",
        "      <td>961</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>175</th>\n",
        "      <td>490</td>\n",
-       "      <td>1</td>\n",
        "      <td>176</td>\n",
        "      <td>1141</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -193,23 +193,23 @@
        "</div>"
       ],
       "text/plain": [
-       "     key_messenger  total_hora  key_hecho_entrega_mensajeria_hora  key_hora\n",
-       "0                1           1                                  1       121\n",
-       "1                1           1                                  2       421\n",
-       "2                1           1                                  3       481\n",
-       "3                1           1                                  4       661\n",
-       "4                1           1                                  5       721\n",
-       "..             ...         ...                                ...       ...\n",
-       "171            447           3                                172       601\n",
-       "172            447           1                                173       841\n",
-       "173            447           2                                174       901\n",
-       "174            447           1                                175       961\n",
-       "175            490           1                                176      1141\n",
+       "     key_mensajero  key_hecho_entrega_mensajeria_hora  key_hora  total_hora\n",
+       "0                1                                  1       121           1\n",
+       "1                1                                  2       421           1\n",
+       "2                1                                  3       481           1\n",
+       "3                1                                  4       661           1\n",
+       "4                1                                  5       721           1\n",
+       "..             ...                                ...       ...         ...\n",
+       "171            447                                172       601           3\n",
+       "172            447                                173       841           1\n",
+       "173            447                                174       901           2\n",
+       "174            447                                175       961           1\n",
+       "175            490                                176      1141           1\n",
        "\n",
        "[176 rows x 4 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,29 +232,37 @@
     "hecho_entrega_mensajeria_hora = pd.merge(hecho_entrega_mensajeria_hora_nm1, clientes_mensajeroaquitoy, left_on='mensajero3_id', right_on='id', how='inner')\n",
     "\n",
     "registro_de_hecho_entrega_mensajeria_hora_con_tiempos_y_mensajeros = []\n",
-    "conteo_de_mensajeros_por_servicio = {}\n",
+    "mensajeros_por_servicio = {}\n",
     "for index, row in hecho_entrega_mensajeria_hora.iterrows():\n",
     "    servicio_id = hecho_entrega_mensajeria_hora.iloc[index, 7]\n",
-    "    if servicio_id not in conteo_de_mensajeros_por_servicio:\n",
-    "        conteo_de_mensajeros_por_servicio[servicio_id] = 1\n",
-    "    elif conteo_de_mensajeros_por_servicio[servicio_id] == 1:\n",
-    "        conteo_de_mensajeros_por_servicio[servicio_id] += 1\n",
-    "    elif conteo_de_mensajeros_por_servicio[servicio_id] == 2:\n",
-    "        nueva_fila = {'hora': hecho_entrega_mensajeria_hora.iloc[index, 5].replace(minute=0, second=0), 'key_messenger': int(hecho_entrega_mensajeria_hora.iloc[index, 9])}\n",
+    "    if servicio_id not in mensajeros_por_servicio:\n",
+    "        mensajeros_por_servicio[servicio_id] = 1\n",
+    "    elif mensajeros_por_servicio[servicio_id] == 1:\n",
+    "        mensajeros_por_servicio[servicio_id] += 1\n",
+    "    elif mensajeros_por_servicio[servicio_id] == 2:\n",
+    "        nueva_fila = {'hora': hecho_entrega_mensajeria_hora.iloc[index, 5].replace(minute=0, second=0), 'key_mensajero': int(hecho_entrega_mensajeria_hora.iloc[index, 9])}\n",
     "        registro_de_hecho_entrega_mensajeria_hora_con_tiempos_y_mensajeros.append(nueva_fila)\n",
-    "        conteo_de_mensajeros_por_servicio[servicio_id] += 1\n",
+    "        mensajeros_por_servicio[servicio_id] += 1\n",
     "\n",
-    "hecho_entrega_mensajeria_hora_con_tiempos_y_mensajeros = pd.DataFrame(registro_de_hecho_entrega_mensajeria_hora_con_tiempos_y_mensajeros)\n",
-    "hecho_entrega_mensajeria_hora_con_tiempos_y_mensajeros_agrupados = hecho_entrega_mensajeria_hora_con_tiempos_y_mensajeros.groupby(['key_messenger', 'hora']).size().reset_index(name='total_hora')\n",
-    "hecho_entrega_mensajeria_hora_con_tiempos_y_mensajeros_agrupados[\"key_hecho_entrega_mensajeria_hora\"] = range(1, len(hecho_entrega_mensajeria_hora_con_tiempos_y_mensajeros_agrupados) + 1)\n",
+    "hecho_entrega_mensajeria_hora_tiempos_mensajeros = pd.DataFrame(registro_de_hecho_entrega_mensajeria_hora_con_tiempos_y_mensajeros)\n",
+    "hecho_entrega_mensajeria_hora_tiempos_mensajeros_agrupados = hecho_entrega_mensajeria_hora_tiempos_mensajeros.groupby(['key_mensajero', 'hora']).size().reset_index(name='total_hora')\n",
+    "hecho_entrega_mensajeria_hora_tiempos_mensajeros_agrupados[\"key_hecho_entrega_mensajeria_hora\"] = range(1, len(hecho_entrega_mensajeria_hora_tiempos_mensajeros_agrupados) + 1)\n",
     "\n",
     "dim_hora = pd.read_sql_table('dim_hora', etl)\n",
     "\n",
-    "hecho_entrega_mensajeria_hora_con_tiempos_y_mensajeros_agrupadoss_con_hora_id = hecho_entrega_mensajeria_hora_con_tiempos_y_mensajeros_agrupados.merge(dim_hora[['hora', 'key_dim_hora']], on='hora', how='left')\n",
-    "hecho_entrega_mensajeria_hora_con_tiempos_y_mensajeros_agrupadoss_con_hora_id.drop(columns=['hora'], inplace=True)\n",
-    "hecho_entrega_mensajeria_hora_con_tiempos_y_mensajeros_agrupadoss_con_hora_id.rename(columns={'key_dim_hora': 'key_hora'}, inplace=True)\n",
+    "hecho_entrega_mensajeria_hora_tiempos_mensajeros_agrupados_hora_id = hecho_entrega_mensajeria_hora_tiempos_mensajeros_agrupados.merge(dim_hora[['hora', 'key_dim_hora']], on='hora', how='left')\n",
+    "hecho_entrega_mensajeria_hora_tiempos_mensajeros_agrupados_hora_id.drop(columns=['hora'], inplace=True)\n",
+    "hecho_entrega_mensajeria_hora_tiempos_mensajeros_agrupados_hora_id.rename(columns={'key_dim_hora': 'key_hora'}, inplace=True)\n",
     "\n",
-    "hecho_entrega_mensajeria_hora_con_tiempos_y_mensajeros_agrupadoss_con_hora_id"
+    "# Mover la columna 'telefono' al final\n",
+    "cols = [col for col in hecho_entrega_mensajeria_hora_tiempos_mensajeros_agrupados_hora_id.columns if col != 'total_hora'] + ['total_hora']\n",
+    "hecho_entrega_mensajeria_hora_tiempos_mensajeros_agrupados_hora_id = hecho_entrega_mensajeria_hora_tiempos_mensajeros_agrupados_hora_id[cols]\n",
+    "\n",
+    "\n",
+    "# Eliminar filas duplicadas en 'hecho_novedad'\n",
+    "hecho_entrega_mensajeria_hora_tiempos_mensajeros_agrupados_hora_id = hecho_entrega_mensajeria_hora_tiempos_mensajeros_agrupados_hora_id.drop_duplicates()\n",
+    "\n",
+    "hecho_entrega_mensajeria_hora_tiempos_mensajeros_agrupados_hora_id"
    ]
   },
   {
@@ -266,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -275,13 +283,13 @@
        "176"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hecho_entrega_mensajeria_hora_con_tiempos_y_mensajeros_agrupadoss_con_hora_id.to_sql(\"hecho_entrega_mensajeria_hora\", etl, index=False, if_exists=\"replace\")"
+    "hecho_entrega_mensajeria_hora_tiempos_mensajeros_agrupados_hora_id.to_sql(\"hecho_entrega_mensajeria_hora\", etl, index=False, if_exists=\"replace\")"
    ]
   }
  ],
@@ -301,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
