--- a/notebook/hecho_entrega_mensajeria_acumulada.ipynb
+++ b/notebook/hecho_entrega_mensajeria_acumulada.ipynb
@@ -71,12 +71,12 @@
     "mensajeria_estadosservicio.drop(columns=[\"foto\", \"observaciones\", \"es_prueba\", \"foto_binary\"], inplace=True)\n",
     "\n",
     "# Función para llenar las fechas y horas de los servicios\n",
-    "def asignar_fecha_y_hora(mensajeria, biblioteca, id_servicio, indice, fecha_clave, hora_clave):\n",
+    "def asignar_fecha_y_hora(mensajeria, biblioteca, id_servicio, indice, key_fecha, key_hora):\n",
     "    fecha_base_datos = mensajeria.iloc[indice, 1].strftime(\"%Y-%m-%d\")\n",
     "    hora_base_datos = mensajeria.iloc[indice, 2].strftime('%H:%M')\n",
     "    \n",
-    "    biblioteca[id_servicio][fecha_clave] = fecha_base_datos\n",
-    "    biblioteca[id_servicio][hora_clave] = hora_base_datos\n",
+    "    biblioteca[id_servicio][key_fecha] = fecha_base_datos\n",
+    "    biblioteca[id_servicio][key_hora] = hora_base_datos\n",
     "\n",
     "# Función para calcular la duración entre dos eventos\n",
     "def calcular_duracion(biblioteca, id_servicio, fecha_inicial, hora_inicial, fecha_final, hora_final, duracion_clave):\n",
@@ -644,7 +644,7 @@
     "    fact_mensajeria[col_hora] = pd.to_numeric(fact_mensajeria[col_hora], errors='coerce').astype('Int64')\n",
     "\n",
     "# Añadir una columna de clave primaria acumulada\n",
-    "fact_mensajeria[\"clave_fact_mensajeria_acumulada\"] = range(1, len(fact_mensajeria) + 1)\n",
+    "fact_mensajeria[\"key_fact_mensajeria_acumulada\"] = range(1, len(fact_mensajeria) + 1)\n",
     "\n",
     "# Mostrar el DataFrame final\n",
     "fact_mensajeria\n"
@@ -694,7 +694,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
