--- a/notebook/hecho_novedad.ipynb
+++ b/notebook/hecho_novedad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -67,59 +67,47 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>key_dim_mensajero</th>\n",
-       "      <th>key_dim_fecha</th>\n",
-       "      <th>key_servicio</th>\n",
-       "      <th>key_tipo_novedad</th>\n",
+       "      <th>key_service</th>\n",
+       "      <th>key_type_novelty</th>\n",
+       "      <th>total_novelty</th>\n",
        "      <th>key_hecho_novedad</th>\n",
-       "      <th>total_novedad</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7</td>\n",
-       "      <td>334</td>\n",
-       "      <td>51</td>\n",
+       "      <td>29</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7</td>\n",
-       "      <td>334</td>\n",
-       "      <td>51</td>\n",
+       "      <td>29</td>\n",
        "      <td>2</td>\n",
-       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>51</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>7</td>\n",
-       "      <td>334</td>\n",
-       "      <td>29</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <th>3</th>\n",
+       "      <td>51</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>7</td>\n",
-       "      <td>334</td>\n",
-       "      <td>29</td>\n",
+       "      <th>4</th>\n",
+       "      <td>57</td>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>7</td>\n",
-       "      <td>341</td>\n",
-       "      <td>29</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -127,139 +115,80 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5969</th>\n",
-       "      <td>25</td>\n",
-       "      <td>609</td>\n",
-       "      <td>28461</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3559</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5970</th>\n",
-       "      <td>27</td>\n",
-       "      <td>609</td>\n",
+       "      <th>3557</th>\n",
        "      <td>28455</td>\n",
        "      <td>1</td>\n",
-       "      <td>3558</td>\n",
        "      <td>1</td>\n",
+       "      <td>3558</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5971</th>\n",
-       "      <td>25</td>\n",
-       "      <td>609</td>\n",
+       "      <th>3558</th>\n",
+       "      <td>28461</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3559</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3559</th>\n",
        "      <td>28464</td>\n",
        "      <td>2</td>\n",
-       "      <td>3560</td>\n",
        "      <td>1</td>\n",
+       "      <td>3560</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5972</th>\n",
-       "      <td>25</td>\n",
-       "      <td>609</td>\n",
-       "      <td>28467</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3562</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5973</th>\n",
-       "      <td>25</td>\n",
-       "      <td>609</td>\n",
+       "      <th>3560</th>\n",
        "      <td>28466</td>\n",
        "      <td>2</td>\n",
-       "      <td>3561</td>\n",
        "      <td>1</td>\n",
+       "      <td>3561</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3561</th>\n",
+       "      <td>28467</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3562</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3875 rows × 6 columns</p>\n",
+       "<p>3562 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      key_dim_mensajero  key_dim_fecha  key_servicio  key_tipo_novedad  \\\n",
-       "0                     7            334            51                 1   \n",
-       "1                     7            334            51                 2   \n",
-       "16                    7            334            29                 1   \n",
-       "17                    7            334            29                 2   \n",
-       "18                    7            341            29                 1   \n",
-       "...                 ...            ...           ...               ...   \n",
-       "5969                 25            609         28461                 2   \n",
-       "5970                 27            609         28455                 1   \n",
-       "5971                 25            609         28464                 2   \n",
-       "5972                 25            609         28467                 2   \n",
-       "5973                 25            609         28466                 2   \n",
+       "      key_service  key_type_novelty  total_novelty  key_hecho_novedad\n",
+       "0              29                 1              1                  1\n",
+       "1              29                 2              1                  2\n",
+       "2              51                 1              5                  3\n",
+       "3              51                 2              3                  4\n",
+       "4              57                 1              2                  5\n",
+       "...           ...               ...            ...                ...\n",
+       "3557        28455                 1              1               3558\n",
+       "3558        28461                 2              1               3559\n",
+       "3559        28464                 2              1               3560\n",
+       "3560        28466                 2              1               3561\n",
+       "3561        28467                 2              2               3562\n",
        "\n",
-       "      key_hecho_novedad  total_novedad  \n",
-       "0                     3              5  \n",
-       "1                     4              3  \n",
-       "16                    1              1  \n",
-       "17                    2              1  \n",
-       "18                    1              1  \n",
-       "...                 ...            ...  \n",
-       "5969               3559              1  \n",
-       "5970               3558              1  \n",
-       "5971               3560              1  \n",
-       "5972               3562              2  \n",
-       "5973               3561              1  \n",
-       "\n",
-       "[3875 rows x 6 columns]"
+       "[3562 rows x 4 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "novedad_servicio = pd.read_sql_table('mensajeria_novedadesservicio', src)\n",
-    "mensajero = pd.read_sql_table('dim_mensajero', etl)\n",
-    "fecha = pd.read_sql_table('dim_fecha', etl)\n",
+    "dim_tipo_novedad = pd.read_sql_table('dim_tipo_novedad', etl)\n",
+    "hecho_novedad = novedad_servicio.groupby(['servicio_id', 'tipo_novedad_id']).size().reset_index(name='total_novedad')\n",
     "\n",
-    "# Seleccionar solo las columnas 'id', 'mensajero_id' y 'fecha_novedad'\n",
-    "hecho_novedad1 = novedad_servicio[['id', 'mensajero_id', 'fecha_novedad', 'servicio_id']].copy()\n",
-    "\n",
-    "# Renombrar la columna 'servicio_id' a 'id_servicio'\n",
-    "hecho_novedad1.rename(columns={'servicio_id': 'id_servicio'}, inplace=True)\n",
-    "\n",
-    "\n",
-    "# Asegúrate de que tienes la columna común entre 'hecho_novedad' y 'mensajero'\n",
-    "hecho_novedad1 = hecho_novedad1.merge(mensajero[['key_dim_mensajero']], left_on='mensajero_id', right_on='key_dim_mensajero', how='left')\n",
-    "\n",
-    "hecho_novedad1.drop(columns=['mensajero_id'], inplace=True)\n",
-    "\n",
-    "# Eliminar la hora de 'fecha_novedad' y dejar solo la fecha (año, mes, día)\n",
-    "hecho_novedad1['fecha_novedad'] = hecho_novedad1['fecha_novedad'].dt.date\n",
-    "\n",
-    "\n",
-    "# Ahora ambas columnas tienen el mismo formato\n",
-    "# Asegurarte de que ambas columnas son de tipo datetime64\n",
-    "hecho_novedad1['fecha_novedad'] = pd.to_datetime(hecho_novedad1['fecha_novedad'])\n",
-    "fecha['fecha'] = pd.to_datetime(fecha['fecha'])\n",
-    "\n",
-    "# Realizar el merge ahora\n",
-    "hecho_novedad1 = hecho_novedad1.merge(fecha[['key_dim_fecha', 'fecha']], left_on='fecha_novedad', right_on='fecha', how='left')\n",
-    "hecho_novedad1.drop(columns=['id','fecha_novedad','fecha'], inplace=True)\n",
-    "\n",
-    "\n",
-    "\n",
-    "hecho_novedad2 = novedad_servicio.groupby(['servicio_id', 'tipo_novedad_id']).size().reset_index(name='total_novedad')\n",
-    "\n",
-    "hecho_novedad2.rename(columns={\n",
+    "hecho_novedad.rename(columns={\n",
     "    'servicio_id': 'key_servicio',\n",
     "    'tipo_novedad_id': 'key_tipo_novedad',\n",
     "}, inplace=True)\n",
     "\n",
-    "hecho_novedad2[\"key_hecho_novedad\"] = range(1, len(hecho_novedad2) + 1)\n",
-    "\n",
-    "hecho_novedad = hecho_novedad1.merge(hecho_novedad2, left_on='id_servicio', right_on='key_servicio', how='left')\n",
-    "hecho_novedad.drop(columns=['id_servicio'], inplace=True)\n",
-    "\n",
-    "\n",
+    "hecho_novedad[\"key_hecho_novedad\"] = range(1, len(hecho_novedad) + 1)\n",
     "\n",
     "# Mover la columna 'telefono' al final\n",
     "cols = [col for col in hecho_novedad.columns if col != 'total_novedad'] + ['total_novedad']\n",
@@ -269,25 +198,21 @@
     "# Eliminar filas duplicadas en 'hecho_novedad'\n",
     "hecho_novedad = hecho_novedad.drop_duplicates()\n",
     "\n",
-    "\n",
-    "# Ahora el DataFrame 'hecho_novedad' tiene la columna 'key_dim_mensajero'\n",
-    "hecho_novedad\n",
-    "\n",
-    "\n"
+    "hecho_novedad"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "875"
+       "562"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
